--- a/Doc_HTML/DrawActions$.html
+++ b/Doc_HTML/DrawActions$.html
@@ -254,7 +254,7 @@
     </span>
       
     </li><li name="DrawActions#draw_possible_moves" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="draw_possible_moves(case_list:Array[(Int,Int)],pice_position_x:Int,piece_position_y:Int,piece_grid:Int):Unit"></a>
+      <a id="draw_possible_moves(case_list:Array[(Int,Int)],pice_position_x:Int,piece_position_y:Int,grid:Int):Unit"></a>
       <a id="draw_possible_moves(Array[(Int,Int)],Int,Int,Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -262,10 +262,10 @@
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">draw_possible_moves</span><span class="params">(<span name="case_list">case_list: <span class="extype" name="scala.Array">Array</span>[(<span class="extype" name="scala.Int">Int</span>, <span class="extype" name="scala.Int">Int</span>)]</span>, <span name="pice_position_x">pice_position_x: <span class="extype" name="scala.Int">Int</span></span>, <span name="piece_position_y">piece_position_y: <span class="extype" name="scala.Int">Int</span></span>, <span name="piece_grid">piece_grid: <span class="extype" name="scala.Int">Int</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">draw_possible_moves</span><span class="params">(<span name="case_list">case_list: <span class="extype" name="scala.Array">Array</span>[(<span class="extype" name="scala.Int">Int</span>, <span class="extype" name="scala.Int">Int</span>)]</span>, <span name="pice_position_x">pice_position_x: <span class="extype" name="scala.Int">Int</span></span>, <span name="piece_position_y">piece_position_y: <span class="extype" name="scala.Int">Int</span></span>, <span name="grid">grid: <span class="extype" name="scala.Int">Int</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
       </span>
       </h4><span class="permalink">
-      <a href="index.html#DrawActions$@draw_possible_moves(case_list:Array[(Int,Int)],pice_position_x:Int,piece_position_y:Int,piece_grid:Int):Unit" title="Permalink" target="_top">
+      <a href="index.html#DrawActions$@draw_possible_moves(case_list:Array[(Int,Int)],pice_position_x:Int,piece_position_y:Int,grid:Int):Unit" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
