--- a/Doc_HTML/DrawGameSelection$.html
+++ b/Doc_HTML/DrawGameSelection$.html
@@ -142,7 +142,7 @@
     </span>
       
     </li><li name="DrawGameSelection.Option" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="OptionextendsAnyRef"></a>
+      <a id="OptionextendsPrettyBigButton"></a>
       <a id="Option:Option"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -150,10 +150,10 @@
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a href="DrawGameSelection$$Option.html"><span class="name">Option</span></a><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+        <a href="DrawGameSelection$$Option.html"><span class="name">Option</span></a><span class="result"> extends <a href="PrettyBigButton.html" class="extype" name="PrettyBigButton">PrettyBigButton</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="index.html#DrawGameSelection$@OptionextendsAnyRef" title="Permalink" target="_top">
+      <a href="index.html#DrawGameSelection$@OptionextendsPrettyBigButton" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
