--- a/Doc_HTML/DrawMenu$.html
+++ b/Doc_HTML/DrawMenu$.html
@@ -126,7 +126,7 @@
     </span>
       <p class="shortcomment cmt">The principal menu : for each line there are two buttons and a background between them.</p>
     </li><li name="DrawMenu.Option" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="OptionextendsAnyRef"></a>
+      <a id="OptionextendsPrettyBigButton"></a>
       <a id="Option:Option"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -134,10 +134,10 @@
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a href="DrawMenu$$Option.html"><span class="name">Option</span></a><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+        <a href="DrawMenu$$Option.html"><span class="name">Option</span></a><span class="result"> extends <a href="PrettyBigButton.html" class="extype" name="PrettyBigButton">PrettyBigButton</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="index.html#DrawMenu$@OptionextendsAnyRef" title="Permalink" target="_top">
+      <a href="index.html#DrawMenu$@OptionextendsPrettyBigButton" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
