--- a/Doc_HTML/King.html
+++ b/Doc_HTML/King.html
@@ -534,19 +534,19 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef</dd></dl></div>
-    </li><li name="Piece#nextgrid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="nextgrid:Unit"></a>
-      <a id="nextgrid:Unit"></a>
+    </li><li name="Piece#next_grid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="next_grid:Unit"></a>
+      <a id="next_grid:Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">nextgrid</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">next_grid</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
       </span>
       </h4><span class="permalink">
-      <a href="index.html#King@nextgrid:Unit" title="Permalink" target="_top">
+      <a href="index.html#King@next_grid:Unit" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
@@ -704,6 +704,23 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="King">King</a> → <a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+    </li><li name="Piece#previous_grid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="previous_grid:Unit"></a>
+      <a id="previous_grid:Unit"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">previous_grid</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="index.html#King@previous_grid:Unit" title="Permalink" target="_top">
+        <img src="lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="scala.AnyRef#synchronized" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="synchronized[T0](x$1:=&gt;T0):T0"></a>
       <a id="synchronized[T0](⇒T0):T0"></a>
