--- a/Doc_HTML/Ksparov$.html
+++ b/Doc_HTML/Ksparov$.html
@@ -481,18 +481,18 @@
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef</dd></dl></div>
     </li><li name="Ksparov#play_move" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="play_move(x:Int,y:Int):Unit"></a>
-      <a id="play_move(Int,Int):Unit"></a>
+      <a id="play_move:Unit"></a>
+      <a id="play_move:Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">play_move</span><span class="params">(<span name="x">x: <span class="extype" name="scala.Int">Int</span></span>, <span name="y">y: <span class="extype" name="scala.Int">Int</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">play_move</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
       </span>
       </h4><span class="permalink">
-      <a href="index.html#Ksparov$@play_move(x:Int,y:Int):Unit" title="Permalink" target="_top">
+      <a href="index.html#Ksparov$@play_move:Unit" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
