--- a/Doc_HTML/Human.html
+++ b/Doc_HTML/Human.html
@@ -165,6 +165,40 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
+    </li><li name="Player#actual_period" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="actual_period:Int"></a>
+      <a id="actual_period:Int"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">var</span>
+      </span>
+      <span class="symbol">
+        <span class="name">actual_period</span><span class="result">: <span class="extype" name="scala.Int">Int</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="index.html#Human@actual_period:Int" title="Permalink" target="_top">
+        <img src="lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
+    </li><li name="Player#actual_time" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="actual_time:Int"></a>
+      <a id="actual_time:Int"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">var</span>
+      </span>
+      <span class="symbol">
+        <span class="name">actual_time</span><span class="result">: <span class="extype" name="scala.Int">Int</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="index.html#Human@actual_time:Int" title="Permalink" target="_top">
+        <img src="lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
     </li><li name="Player#ai" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="ai:Boolean"></a>
       <a id="ai:Boolean"></a>
@@ -428,6 +462,23 @@
       </span>
       </h4><span class="permalink">
       <a href="index.html#Human@moved:Boolean" title="Permalink" target="_top">
+        <img src="lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
+    </li><li name="Player#nb_move" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="nb_move:Int"></a>
+      <a id="nb_move:Int"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">var</span>
+      </span>
+      <span class="symbol">
+        <span class="name">nb_move</span><span class="result">: <span class="extype" name="scala.Int">Int</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="index.html#Human@nb_move:Int" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
