--- a/Doc_HTML/Pawn.html
+++ b/Doc_HTML/Pawn.html
@@ -483,19 +483,19 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef</dd></dl></div>
-    </li><li name="Piece#nextgrid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="nextgrid:Unit"></a>
-      <a id="nextgrid:Unit"></a>
+    </li><li name="Piece#next_grid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="next_grid:Unit"></a>
+      <a id="next_grid:Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">nextgrid</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">next_grid</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
       </span>
       </h4><span class="permalink">
-      <a href="index.html#Pawn@nextgrid:Unit" title="Permalink" target="_top">
+      <a href="index.html#Pawn@next_grid:Unit" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
@@ -649,6 +649,23 @@
       </span>
       </h4><span class="permalink">
       <a href="index.html#Pawn@pre_move(x_a:Int,y_a:Int,g:Array[Piece]):(Boolean,Option[Piece],List[Piece])" title="Permalink" target="_top">
+        <img src="lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+    </li><li name="Piece#previous_grid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="previous_grid:Unit"></a>
+      <a id="previous_grid:Unit"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">previous_grid</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="index.html#Pawn@previous_grid:Unit" title="Permalink" target="_top">
         <img src="lib/permalink.png" alt="Permalink" />
       </a>
     </span>
