scala doc operational

--- a/Doc_HTML/Save$.html
+++ b/Doc_HTML/Save$.html
@@ -107,7 +107,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <p class="shortcomment cmt">List of tuple (irock,prom,piece_prom,piece,attack,check,p1,p2) with</p><div class="fullcomment"><div class="comment cmt"><p>List of tuple (irock,prom,piece_prom,piece,attack,check,p1,p2) with</p><ul><li>irock=0 if no roque, = 1 queen-side, = -1 if king-side.</li><li>prom = true if promotion occurs, then piece_prom indicates chosen piece.</li><li>piece : the piece qui which moves (K king ,Q queen ,B bishop ,N knight ,R rook).</li><li>attack = true if a piece is eaten</li><li>check = true if check occurs</li><li>p1 initial position, p2 final position of piece</li></ul></div></div>
+      <p class="shortcomment cmt">tuple (irock,prom,piece_prom,piece,attack,check,p1,p2) with</p><div class="fullcomment"><div class="comment cmt"><p>tuple (irock,prom,piece_prom,piece,attack,check,p1,p2) with</p><ul><li>irock=0 if no roque, = 1 queen-side, = -1 if king-side.</li><li>prom = true if promotion occurs, then piece_prom indicates chosen piece.</li><li>piece : the piece qui which moves (K king ,Q queen ,B bishop ,N knight ,R rook).</li><li>attack = true if a piece is eaten</li><li>check = true if check occurs</li><li>p1 initial position, p2 final position of piece</li></ul></div></div>
     </li></ol>
             </div>
 
