--- a/Doc_HTML/Load$.html
+++ b/Doc_HTML/Load$.html
@@ -399,7 +399,7 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
-    </li><li name="Load#get_list_move_from_file" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+    </li><li name="Load#get_list_move_from_file" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="get_list_move_from_file(filename:String):Unit"></a>
       <a id="get_list_move_from_file(String):Unit"></a>
       <h4 class="signature">
@@ -415,7 +415,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <p class="shortcomment cmt">reads from file, escaping variations and comments and linefeed.</p>
+      <p class="shortcomment cmt">Reads from file.</p><div class="fullcomment"><div class="comment cmt"><p>Reads from file. filename is the name of the file without the .pgn extension. It escapes variations and comments and linefeed character.</p></div></div>
     </li><li name="scala.AnyRef#hashCode" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="hashCode():Int"></a>
       <a id="hashCode():Int"></a>
