--- a/Doc_HTML/AI.html
+++ b/Doc_HTML/AI.html
@@ -319,6 +319,23 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="AI">AI</a> → <a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
+    </li><li name="Player#check_triple_repetition" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="check_triple_repetition:Boolean"></a>
+      <a id="check_triple_repetition:Boolean"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">check_triple_repetition</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="index.html#AI@check_triple_repetition:Boolean" title="Permalink" target="_top">
+        <img src="lib/permalink.png" />
+      </a>
+    </span>
+      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
     </li><li name="scala.AnyRef#clone" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="clone():Object"></a>
       <a id="clone():AnyRef"></a>
