--- a/Doc_HTML/Bishop.html
+++ b/Doc_HTML/Bishop.html
@@ -49,7 +49,7 @@
       </span>
       </h4>
       
-          <div id="comment" class="fullcommenttop"><div class="toggleContainer block">
+          <div id="comment" class="fullcommenttop"><div class="comment cmt"><p>The Bishop class</p></div><div class="toggleContainer block">
           <span class="toggle">Linear Supertypes</span>
           <div class="superTypes hiddenContent"><a href="Piece.html" class="extype" name="Piece">Piece</a>, <span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div></div>
@@ -199,7 +199,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Auxiliary function for possible_moves returning the possibility of a move</p><div class="fullcomment"><div class="comment cmt"><p>Auxiliary function for possible_moves returning the possibility of a move</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#checks_pre_move" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="checks_pre_move(x_a:Int,y_a:Int):Boolean"></a>
       <a id="checks_pre_move(Int,Int):Boolean"></a>
@@ -216,7 +216,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Checks if basic conditions for a piece movement are satisfied</p><div class="fullcomment"><div class="comment cmt"><p>Checks if basic conditions for a piece movement are satisfied</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#clear_path" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="clear_path(x_d:Int,y_d:Int,x_a:Int,y_a:Int,g:Array[Piece],dir_x:Int,dir_y:Int):(Boolean,Option[Piece])"></a>
       <a id="clear_path(Int,Int,Int,Int,Array[Piece],Int,Int):(Boolean,Option[Piece])"></a>
@@ -233,7 +233,8 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Recursive function that explores the path of a movement.</p><div class="fullcomment"><div class="comment cmt"><p>Recursive function that explores the path of a movement.
+  The boolean indicates if the path is clear, and the piece is either the ennemy piece on arrival, an obstacle on the path, or None.</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="scala.AnyRef#clone" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="clone():Object"></a>
       <a id="clone():AnyRef"></a>
@@ -273,7 +274,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Returns the coordinates of the piece</p><div class="fullcomment"><div class="comment cmt"><p>Returns the coordinates of the piece</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="scala.AnyRef#eq" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="eq(x$1:AnyRef):Boolean"></a>
       <a id="eq(AnyRef):Boolean"></a>
@@ -364,7 +365,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Returns the directions of a movement (-1, 0 or 1)</p><div class="fullcomment"><div class="comment cmt"><p>Returns the directions of a movement (-1, 0 or 1)</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#grid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="grid:Int"></a>
       <a id="grid:Int"></a>
@@ -381,7 +382,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">[Alice Chess] indicates the grid in which the piece is</p><div class="fullcomment"><div class="comment cmt"><p>[Alice Chess] indicates the grid in which the piece is</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="scala.AnyRef#hashCode" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="hashCode():Int"></a>
       <a id="hashCode():Int"></a>
@@ -432,7 +433,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">[Alice Chess] Checks if the corresponding case on the next grid is free</p><div class="fullcomment"><div class="comment cmt"><p>[Alice Chess] Checks if the corresponding case on the next grid is free</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#move" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="move(x_a:Int,y_a:Int,g:Array[Piece]):Boolean"></a>
       <a id="move(Int,Int,Array[Piece]):Boolean"></a>
@@ -449,7 +450,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Returns the validity of movement and the piece taken or the reason why the move is invalid.</p><div class="fullcomment"><div class="comment cmt"><p>Returns the validity of movement and the piece taken or the reason why the move is invalid. If the move is valid, applies it.*</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Bishop#name" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="name:String"></a>
       <a id="name:String"></a>
@@ -466,7 +467,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="Bishop">Bishop</a> → <a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">A string describing the type of piece (pawn, rook...).</p><div class="fullcomment"><div class="comment cmt"><p>A string describing the type of piece (pawn, rook...). Has no capital letter</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="Bishop">Bishop</a> → <a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="scala.AnyRef#ne" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="ne(x$1:AnyRef):Boolean"></a>
       <a id="ne(AnyRef):Boolean"></a>
@@ -500,7 +501,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">[Alice Chess] Moves the piece to the next grid</p><div class="fullcomment"><div class="comment cmt"><p>[Alice Chess] Moves the piece to the next grid</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="scala.AnyRef#notify" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="notify():Unit"></a>
       <a id="notify():Unit"></a>
@@ -551,7 +552,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="Bishop">Bishop</a> → <a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">The way the piece is allowed to move, independantly from the board</p><div class="fullcomment"><div class="comment cmt"><p>The way the piece is allowed to move, independantly from the board</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="Bishop">Bishop</a> → <a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Bishop#piece_path" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="piece_path:String"></a>
       <a id="piece_path:String"></a>
@@ -568,7 +569,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="Bishop">Bishop</a> → <a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">The path to the file containing the image for that piece</p><div class="fullcomment"><div class="comment cmt"><p>The path to the file containing the image for that piece</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="Bishop">Bishop</a> → <a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#player" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="player:Int"></a>
       <a id="player:Int"></a>
@@ -585,7 +586,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">0 if the piece is blac, 1 if it is white</p><div class="fullcomment"><div class="comment cmt"><p>0 if the piece is blac, 1 if it is white</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#player_to_direction" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="player_to_direction:Int"></a>
       <a id="player_to_direction:Int"></a>
@@ -602,7 +603,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">1 if the player is black, -1 if it is white</p><div class="fullcomment"><div class="comment cmt"><p>1 if the player is black, -1 if it is white</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#pos_x" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="pos_x:Int"></a>
       <a id="pos_x:Int"></a>
@@ -619,7 +620,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">x coordinate of a piece</p><div class="fullcomment"><div class="comment cmt"><p>x coordinate of a piece</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#pos_y" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="pos_y:Int"></a>
       <a id="pos_y:Int"></a>
@@ -636,7 +637,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">y coordinate of a piece</p><div class="fullcomment"><div class="comment cmt"><p>y coordinate of a piece</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#possible_moves" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="possible_moves(g:Array[Piece]):Array[(Int,Int)]"></a>
       <a id="possible_moves(Array[Piece]):Array[(Int,Int)]"></a>
@@ -653,7 +654,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Returns an array of all the cases the piece can go to</p><div class="fullcomment"><div class="comment cmt"><p>Returns an array of all the cases the piece can go to</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#pre_move" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="pre_move(x_a:Int,y_a:Int,g:Array[Piece]):(Boolean,Option[Piece],List[Piece])"></a>
       <a id="pre_move(Int,Int,Array[Piece]):(Boolean,Option[Piece],List[Piece])"></a>
@@ -670,7 +671,9 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">Auxiliary function for move : checks if a move is possible but doesn't modify the board
+  Returns the validity of the move, the piece taken, and a list of the pieces attacking the opponent's king</p><div class="fullcomment"><div class="comment cmt"><p>Auxiliary function for move : checks if a move is possible but doesn't modify the board
+  Returns the validity of the move, the piece taken, and a list of the pieces attacking the opponent's king</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="Piece#previous_grid" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="previous_grid:Unit"></a>
       <a id="previous_grid:Unit"></a>
@@ -687,7 +690,7 @@
         <img src="lib/permalink.png" />
       </a>
     </span>
-      <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
+      <p class="shortcomment cmt">[Alice Chess] Moves the piece to the previous_grid grid</p><div class="fullcomment"><div class="comment cmt"><p>[Alice Chess] Moves the piece to the previous_grid grid</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Piece.html" class="extype" name="Piece">Piece</a></dd></dl></div>
     </li><li name="scala.AnyRef#synchronized" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="synchronized[T0](x$1:=&gt;T0):T0"></a>
       <a id="synchronized[T0](⇒T0):T0"></a>
