--- a/Doc_HTML/Player.html
+++ b/Doc_HTML/Player.html
@@ -325,6 +325,23 @@
       </a>
     </span>
       
+    </li><li name="Player#check_triple_repetition" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="check_triple_repetition:Boolean"></a>
+      <a id="check_triple_repetition:Boolean"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">check_triple_repetition</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="index.html#Player@check_triple_repetition:Boolean" title="Permalink" target="_top">
+        <img src="lib/permalink.png" />
+      </a>
+    </span>
+      
     </li><li name="scala.AnyRef#clone" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="clone():Object"></a>
       <a id="clone():AnyRef"></a>
