--- a/Doc_HTML/PrettyBigButton.html
+++ b/Doc_HTML/PrettyBigButton.html
@@ -54,7 +54,7 @@
           <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div><div class="toggleContainer block">
             <span class="toggle">Known Subclasses</span>
-            <div class="subClasses hiddenContent"><a href="DrawSave$$CancelButton.html" class="extype" name="DrawSave.CancelButton">CancelButton</a>, <a href="DrawSave$$ComeBack.html" class="extype" name="DrawSave.ComeBack">ComeBack</a>, <a href="DrawCharge$$Option.html" class="extype" name="DrawCharge.Option">Option</a>, <a href="DrawGameSelection$$Option.html" class="extype" name="DrawGameSelection.Option">Option</a>, <a href="DrawMenu$$Option.html" class="extype" name="DrawMenu.Option">Option</a>, <a href="DrawSave$$SwitchButton.html" class="extype" name="DrawSave.SwitchButton">SwitchButton</a></div>
+            <div class="subClasses hiddenContent"><a href="DrawSave$$CancelButton.html" class="extype" name="DrawSave.CancelButton">CancelButton</a>, <a href="DrawSave$$ComeBack.html" class="extype" name="DrawSave.ComeBack">ComeBack</a>, <a href="DrawGameSelection$$Option.html" class="extype" name="DrawGameSelection.Option">Option</a>, <a href="DrawCharge$$Option.html" class="extype" name="DrawCharge.Option">Option</a>, <a href="DrawMenu$$Option.html" class="extype" name="DrawMenu.Option">Option</a>, <a href="DrawSave$$SwitchButton.html" class="extype" name="DrawSave.SwitchButton">SwitchButton</a></div>
           </div></div>
         
 
